# grph

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml
grph-cli/: Cargo.toml
grph-cli/src/: main.rs
grph-cli/tests/: cli_integration.rs
grph-core/: Cargo.toml
grph-core/src/: compile_commands.rs  ctags.rs  errors.rs  lib.rs  types.rs  utils.rs
grph-core/src/context/: builder.rs  mod.rs
grph-core/src/db/: connection.rs  migrations.rs  mod.rs  queries.rs  schema.rs  schema.sql
grph-core/src/extraction/: grammars.rs  mod.rs  orchestrator.rs  tree_sitter.rs
grph-core/src/extraction/languages/: c.rs  cpp.rs  esqlc.rs  go.rs  javascript.rs  mod.rs  python.rs  rust.rs  shell.rs  tree_common.rs  tsx.rs  typescript.rs
grph-core/src/graph/: call_graph.rs  mod.rs  traversal.rs
grph-core/src/resolution/: builtins.rs  import_resolver.rs  lru_cache.rs  mod.rs  name_matcher.rs  orchestrator.rs  path_aliases.rs
grph-core/src/search/: fts.rs  mod.rs  query_parser.rs
grph-core/tests/: tree_sitter_integration.rs
grph-lsp/: Cargo.toml
grph-lsp/src/: convert.rs  handlers.rs  lib.rs  transport.rs
grph-mcp/: Cargo.toml
grph-mcp/src/: budget.rs  instructions.rs  lib.rs  tools.rs  transport.rs
grph-mcp/tests/: mcp_transport.rs
