[package]
name = "grph-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "grph"
path = "src/main.rs"

[dependencies]
grph-core = { path = "../grph-core" }
grph-mcp = { path = "../grph-mcp" }
grph-lsp = { path = "../grph-lsp" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
indicatif = "0.17"
console = "0.15"
