[package]
name = "grph-cli"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/ildus/grph"

[[bin]]
name = "grph"
path = "src/main.rs"

[dependencies]
grph-core = { path = "../grph-core" }
grph-mcp = { path = "../grph-mcp" }
grph-lsp = { path = "../grph-lsp" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
indicatif = "0.17"
console = "0.15"
