[package]
name = "grph-core"
version = "0.2.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled", "vtab"] }
tree-sitter = "0.22"
tree-sitter-c = "0.21"
tree-sitter-cpp = "0.21"
tree-sitter-python = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-go = "0.21"
tree-sitter-rust = "0.21"
tree-sitter-bash = "0.21"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
thiserror = "1"
sha2 = "0.10"
hex = "0.4"
log = "0.4"
uuid = { version = "1", features = ["v4"] }
