[package]
name = "grph-core"
version = "0.3.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.40", features = ["bundled", "vtab"] }
tree-sitter = "0.26"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-bash = "0.25"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
thiserror = "2"
sha2 = "0.10"
hex = "0.4"
log = "0.4"
uuid = { version = "1", features = ["v4"] }
