[package]
name = "grph-lsp"
version = "0.4.0"
edition = "2021"

[dependencies]
grph-core = { path = "../grph-core" }
lsp-types = "0.97"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
tree-sitter = "0.26"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-bash = "0.25"
